--- a/pwr-graphs.test/pwr-graphs.test.csproj
+++ b/pwr-graphs.test/pwr-graphs.test.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GraphTest.cs" />
+    <Compile Include="KruskalTest.cs" />
+    <Compile Include="PrimeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
