--- a/pwr-graphs.test/pwr-graphs.test.csproj
+++ b/pwr-graphs.test/pwr-graphs.test.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BellmanFordTest.cs" />
     <Compile Include="GraphTest.cs" />
     <Compile Include="KruskalTest.cs" />
     <Compile Include="PrimeTest.cs" />
